avr-hal-generic: Replace core::fmt with ufmt
Signed-off-by: Rahix <rahix@rahix.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,6 @@ members = [
     "boards/arduino-leonardo",
     "boards/trinket",
 ]
+
+[patch.crates-io]
+ufmt = { git = "https://github.com/Rahix/ufmt.git", branch = "16-bit" }
