Update build system & README

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,16 @@
 [profile.dev]
 panic = "abort"
-codegen-units = 1
-incremental = false
+codegen-units = 16
+incremental = true
 lto = true
+opt-level = "s"
 
 [profile.release]
 panic = "abort"
 codegen-units = 1
 debug = false
 lto = true
+opt-level = "z"
 
 [workspace]
 members = [
