--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,14 +3,14 @@ panic = "abort"
 codegen-units = 16
 incremental = true
 lto = true
-opt-level = "s"
+opt-level = 2
 
 [profile.release]
 panic = "abort"
 codegen-units = 1
 debug = false
 lto = true
-opt-level = "z"
+opt-level = 3
 
 [workspace]
 members = [
