Switch to opt-level = "s"
Signed-off-by: Rahix <rahix@rahix.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,14 +3,14 @@ panic = "abort"
 codegen-units = 16
 incremental = true
 lto = true
-opt-level = 2
+opt-level = "s"
 
 [profile.release]
 panic = "abort"
 codegen-units = 1
 debug = false
 lto = true
-opt-level = 3
+opt-level = "s"
 
 [workspace]
 members = [
