--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,13 @@ members = [
     "avr-hal-generic",
 
     # The chip definitions
+    "chips/atmega328p-hal",
     "chips/atmega32u4-hal",
     "chips/attiny85-hal",
 
     # The board crates
     "boards/arduino-leonardo",
+    "boards/arduino-uno",
     "boards/trinket",
 ]
 
