--- a/boards/arduino-leonardo/Cargo.toml
+++ b/boards/arduino-leonardo/Cargo.toml
@@ -11,4 +11,4 @@ avr-hal-generic = { path = "../../avr-hal-generic/" }
 [dev-dependencies]
 panic-halt = "0.2.0"
 nb = "0.1.2"
-ufmt = "0.1.0-beta.4"
+ufmt = "0.1.0"
