--- a/chips/atmega1280-hal/Cargo.toml
+++ b/chips/atmega1280-hal/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2018"
 avr-hal-generic = { path = "../../avr-hal-generic/" }
 
 [dependencies.avr-device]
-git = "https://github.com/Rahix/avr-device"
+# git = "https://github.com/Rahix/avr-device"
+path = "../../../avr-device"
 features = ["atmega1280"]
