revert dependencie overide

--- a/chips/atmega328p-hal/Cargo.toml
+++ b/chips/atmega328p-hal/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2018"
 avr-hal-generic = { path = "../../avr-hal-generic/" }
 
 [dependencies.avr-device]
-# git = "https://github.com/Rahix/avr-device"
-path = "../../../avr-device"
+git = "https://github.com/Rahix/avr-device"
 features = ["atmega328p"]
 
