Switch to avr-device from crates.io
With avr-device becoming available from crates.io, switch to using that
version as this greatly simplifies the build procedure.  With this, the
complicated buildsystem for avr-device is no longer necessary for
avr-hal.

Signed-off-by: Rahix <rahix@rahix.de>

--- a/boards/arduino-leonardo/Cargo.toml
+++ b/boards/arduino-leonardo/Cargo.toml
@@ -14,5 +14,5 @@ nb = "0.1.2"
 ufmt = "0.1.0"
 
 [dev-dependencies.avr-device]
-git = "https://github.com/Rahix/avr-device"
-features = ["rt", "atmega32u4"]
+version = "0.1.0"
+features = ["rt"]
