--- a/chips/attiny85-hal/Cargo.toml
+++ b/chips/attiny85-hal/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2018"
 avr-hal-generic = { path = "../../avr-hal-generic/" }
 
 [dependencies.avr-device]
-git = "https://github.com/Rahix/avr-device"
+version = "0.1.0"
 features = ["attiny85"]
