Export #[entry] macro in all crates
avr-device now exposes a #[entry] macro which should be used instead of
manual definition of the entry point.  This will later allow switching
to a cleaner runtime environment without breaking downstream code.

Export this entry macro in all hal and board crates as well, gated by an
`rt` feature.  This means, e.g. an arduino-uno program can define its
entry point like this:

    #[arduino_uno::entry]
    fn main() -> ! {
        // ...
    }

Signed-off-by: Rahix <rahix@rahix.de>

--- a/boards/arduino-uno/Cargo.toml
+++ b/boards/arduino-uno/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["Jonah Dahlquist <jonah@jonah.name>"]
 edition = "2018"
 
+[features]
+default = ["rt"]
+rt = ["atmega328p-hal/rt"]
+
 [dependencies]
 atmega328p-hal = { path = "../../chips/atmega328p-hal/" }
 avr-hal-generic = { path = "../../avr-hal-generic/" }
