--- a/boards/arduino-leonardo/Cargo.toml
+++ b/boards/arduino-leonardo/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["Rahix <rahix@rahix.de>"]
 edition = "2018"
 
+[features]
+default = ["rt"]
+rt = ["atmega32u4-hal/rt"]
+
 [dependencies]
 atmega32u4-hal = { path = "../../chips/atmega32u4-hal/" }
 avr-hal-generic = { path = "../../avr-hal-generic/" }
@@ -12,7 +16,4 @@ avr-hal-generic = { path = "../../avr-hal-generic/" }
 panic-halt = "0.2.0"
 nb = "0.1.2"
 ufmt = "0.1.0"
-
-[dev-dependencies.avr-device]
-version = "0.1.0"
-features = ["rt"]
+avr-device = "0.1.0"
