--- a/chips/attiny85-hal/Cargo.toml
+++ b/chips/attiny85-hal/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Rahix <rahix@rahix.de>"]
 edition = "2018"
 
+[features]
+rt = ["avr-device/rt"]
+
 [dependencies]
 avr-hal-generic = { path = "../../avr-hal-generic/" }
 
