Cargo.toml: Update profile configuration
Signed-off-by: Rahix <rahix@rahix.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,12 @@
 [profile.dev]
 panic = "abort"
-codegen-units = 16
-incremental = true
 lto = true
 opt-level = "s"
 
 [profile.release]
 panic = "abort"
 codegen-units = 1
-debug = false
+debug = true
 lto = true
 opt-level = "s"
 
