--- a/boards/arduino-leonardo/.cargo/config.toml
+++ b/boards/arduino-leonardo/.cargo/config.toml
@@ -1,5 +1,8 @@
 [build]
 target = "avr-atmega32u4.json"
 
+[target.'cfg(target_arch = "avr")']
+runner = "./leonardo-runner.sh"
+
 [unstable]
 build-std = ["core"]
