--- a/boards/arduino-uno/.cargo/config.toml
+++ b/boards/arduino-uno/.cargo/config.toml
@@ -1,5 +1,8 @@
 [build]
 target = "avr-atmega328p.json"
 
+[target.'cfg(target_arch = "avr")']
+runner = "./uno-runner.sh"
+
 [unstable]
 build-std = ["core"]
