--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
     "boards/arduino-uno",
     "boards/arduino-mega2560",
     "boards/bigavr6",
+    "boards/sparkfun-pro-micro",
     "boards/trinket",
 ]
 
