atmega328p: Support ADC6 and ADC7 pins when available
Some packages of ATmega328P expose the ADC6 and ADC7 signals.  Allow
accessing them when available.  For this, a new `adc-pins` crate feature
is added that needs to be enabled.

Signed-off-by: Rahix <rahix@rahix.de>

--- a/chips/atmega328p-hal/Cargo.toml
+++ b/chips/atmega328p-hal/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 
 [features]
 rt = ["avr-device/rt"]
+# Package exposes the ADC6 and ADC7 pins (only 32TQFP, 32MLF, 32UFBGA)
+adc-pins = []
 
 [dependencies]
 avr-hal-generic = { path = "../../avr-hal-generic/" }
