--- a/boards/arduino-uno/Cargo.toml
+++ b/boards/arduino-uno/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [features]
 default = ["rt"]
 rt = ["atmega328p-hal/rt"]
+arduino-nano = ["atmega328p-hal/adc-pins"]
 
 [dependencies]
 atmega328p-hal = { path = "../../chips/atmega328p-hal/" }
