--- a/chips/attiny861-hal/.cargo/config.toml
+++ b/chips/attiny861-hal/.cargo/config.toml
@@ -1,5 +1,5 @@
 [build]
-target = "../../avr-specs/avr-attiny85.json"
+target = "../../avr-specs/avr-attiny861.json"
 
 [unstable]
 build-std = ["core"]
