--- a/avr-hal-generic/Cargo.toml
+++ b/avr-hal-generic/Cargo.toml
@@ -9,7 +9,8 @@ cfg-if = "0.1.7"
 nb = "0.1.2"
 ufmt = "0.1.0"
 paste = "1.0.0"
-avr-device = "0.2.2"
+#avr-device = "0.2.2"
+avr-device = { path = "../../avr-device/" }
 
 [dependencies.embedded-hal]
 version = "0.2.3"
