ci: Only run push CI for non-feature branches
Otherwise we'll get duplicated jobs for local branches which are also
used in a pull request.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,11 @@
 name: Continuous Integration
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - master
+      - wip
+  pull_request:
 
 jobs:
   board-ci:
