arduino-hal: Add support for Arduino Leonardo
Add basic support for Arduino Leonardo.

--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -11,6 +11,7 @@ rt = ["atmega-hal/rt"]
 board-selected = []
 mcu-atmega=[]
 arduino-uno = ["mcu-atmega", "atmega-hal/atmega328p", "board-selected"]
+arduino-leonardo = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
 
 [dependencies]
 cfg-if = "1"
