--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ members = [
     "examples/arduino-mega2560",
     "examples/arduino-mega1280",
     "examples/arduino-nano",
+    "examples/arduino-nano-every",
     "examples/arduino-uno",
     "examples/atmega2560",
     "examples/nano168",
