[WIP] Add super simple blinky example for Arduino Nano Every
This is all a big jumbled mess and in no way "production ready".

Clock/delay seems to be wrong, at least the blinky blinks way too
slow...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ members = [
     "examples/arduino-leonardo",
     "examples/arduino-mega2560",
     "examples/arduino-nano",
+    "examples/arduino-nano-every",
     "examples/arduino-uno",
     "examples/nano168",
     "examples/sparkfun-promicro",
