--- a/mcu/atmega-hal/Cargo.toml
+++ b/mcu/atmega-hal/Cargo.toml
@@ -19,6 +19,7 @@ atmega164pa = ["avr-device/atmega164pa", "device-selected"]
 atmega168 = ["avr-device/atmega168", "device-selected"]
 atmega328p = ["avr-device/atmega328p", "device-selected"]
 atmega328pb = ["avr-device/atmega328pb", "device-selected"]
+atmega4809 = ["avr-device/atmega4809", "device-selected"]
 atmega32a = ["avr-device/atmega32a", "device-selected"]
 atmega32u4 = ["avr-device/atmega32u4", "device-selected"]
 atmega2560 = ["avr-device/atmega2560", "device-selected"]
