--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -19,12 +19,14 @@ critical-section-impl = ["avr-device/critical-section-impl"]
 board-selected = []
 mcu-atmega = []
 mcu-attiny = []
+mcu-atxmega = []
 arduino-diecimila = ["mcu-atmega", "atmega-hal/atmega168", "board-selected"]
 arduino-leonardo = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
 arduino-mega2560 = ["mcu-atmega", "atmega-hal/atmega2560", "board-selected"]
 arduino-mega1280 = ["mcu-atmega", "atmega-hal/atmega1280", "board-selected"]
 arduino-nano = ["mcu-atmega", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc", "board-selected"]
 arduino-uno = ["mcu-atmega", "atmega-hal/atmega328p", "board-selected"]
+nano-every = ["mcu-atxmega", "atxmega-hal/atmega4809", "atxmega-hal/enable-extra-adc","board-selected"]
 trinket-pro = ["mcu-atmega", "atmega-hal/atmega328p", "board-selected"]
 sparkfun-promicro = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
 sparkfun-promini-3v3 = ["mcu-atmega", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc", "board-selected"]
@@ -51,6 +53,9 @@ path = "../avr-hal-generic/"
 path = "../mcu/atmega-hal/"
 optional = true
 
+[dependencies.atxmega-hal]
+path = "../mcu/atxmega-hal/"
+optional = true
 # Because this crate has its own check that at least one device is selected, we
 # can safely "circumvent" the check in `atmega-hal`.  Due to compile order,
 # this allows us to show our error instead of the one from `atmega-hal` (which
