--- a/examples/arduino-nano-every/.cargo/config.toml
+++ b/examples/arduino-nano-every/.cargo/config.toml
@@ -1,5 +1,8 @@
 [build]
 target = "../../avr-specs/avr-atmega4809.json"
 
+[target.'cfg(target_arch = "avr")']
+runner = "ravedude nano-every -cb 57600 "
+
 [unstable]
 build-std = ["core"]
