--- a/mcu/atxmega-hal/Cargo.toml
+++ b/mcu/atxmega-hal/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [features]
 rt = ["avr-device/rt"]
 device-selected = []
+enable-extra-adc = []
 atmega4809 = ["avr-device/atmega4809", "device-selected"]
 
 # Allow certain downstream crates to overwrite the device selection error by themselves.
@@ -16,7 +17,7 @@ disable-device-selection-error = []
 avr-hal-generic = { path = "../../avr-hal-generic/" }
 
 [dependencies.avr-device]
-version = "0.3"
+version = "0.7.0"
 
 # Because this crate has its own check that at least one device is selected, we
 # can safely "circumvent" the check in `avr-device`.
