--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,9 @@ jobs:
             name: arduino-nano
             examples: true
           - type: board
+            name: arduino-nano-every
+            examples: true
+          - type: board
             name: nano168
             examples: true
           - type: board
