--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
       matrix:
         mcu:
           - name: atmega1280
+            crate: atmega-hal
           - name: atmega168
             crate: atmega-hal
     runs-on: ubuntu-latest
