atmega-hal: Add support for ATmega168

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,8 @@ jobs:
         mcu:
           - name: atmega1280
             crate: atmega-hal
+          - name: atmega168
+            crate: atmega-hal
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
