--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,34 @@ on:
   pull_request:
 
 jobs:
-  board-ci:
-    name: "Board: ${{ matrix.board }}"
+  ci:
+    name: "${{ matrix.m.type }}: ${{ matrix.m.name }}"
     strategy:
       fail-fast: true
       matrix:
-        board:
-          - arduino-uno
-          - arduino-leonardo
-          - arduino-mega2560
+        m:
+          - type: board
+            name: arduino-uno
+          - type: board
+            name: arduino-leonardo
+          - type: board
+            name: arduino-mega2560
+          - type: mcu
+            name: atmega1280
+            spec: atmega1280
+            crate: atmega-hal
+          - type: mcu
+            name: atmega168
+            spec: atmega168
+            crate: atmega-hal
+          - type: mcu
+            name: atmega328pb
+            spec: atmega328p
+            crate: atmega-hal
+          - type: mcu
+            name: atmega48p
+            spec: atmega48p
+            crate: atmega-hal
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -32,35 +51,8 @@ jobs:
       - name: Install avr-gcc, binutils, and libc
         run: sudo apt-get install -y avr-libc binutils-avr gcc-avr
       - name: Compile board crate and examples
-        run: cd "examples/${{ matrix.board }}" && cargo build --bins
-  mcu-ci:
-    name: "MCU: ${{ matrix.mcu.name }}"
-    strategy:
-      fail-fast: true
-      matrix:
-        mcu:
-          - name: atmega1280
-            spec: atmega1280
-            crate: atmega-hal
-          - name: atmega168
-            spec: atmega168
-            crate: atmega-hal
-          - name: atmega328pb
-            spec: atmega328p
-            crate: atmega-hal
-          - name: atmega48p
-            spec: atmega48p
-            crate: atmega-hal
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly-2021-01-07
-          override: true
-          components: rust-src
+        if: "${{ matrix.m.type == 'board' }}"
+        run: cd "examples/${{ matrix.m.name }}" && cargo build --bins
       - name: Test-compile HAL crate for an MCU
-        run: cd "mcu/${{ matrix.mcu.crate }}" && cargo build --features "${{ matrix.mcu.name }}" -Z build-std=core --target "../../avr-specs/avr-${{ matrix.mcu.spec }}.json"
+        if: "${{ matrix.m.type == 'mcu' }}"
+        run: cd "mcu/${{ matrix.m.crate }}" && cargo build --features "${{ matrix.m.name }}" -Z build-std=core --target "../../avr-specs/avr-${{ matrix.m.spec }}.json"
