--- a/examples/arduino-uno/.cargo/config.toml
+++ b/examples/arduino-uno/.cargo/config.toml
@@ -2,7 +2,7 @@
 target = "../../avr-specs/avr-atmega328p.json"
 
 [target.'cfg(target_arch = "avr")']
-runner = "../../boards/arduino-uno/uno-runner.sh"
+runner = "ravedude uno -cb 57600"
 
 [unstable]
 build-std = ["core"]
