--- a/ravedude/Cargo.toml
+++ b/ravedude/Cargo.toml
@@ -3,6 +3,12 @@ name = "ravedude"
 version = "0.1.0"
 authors = ["Rahix <rahix@rahix.de>"]
 edition = "2018"
+description = "Tool to easily flash code onto an AVR microcontroller with avrdude"
+readme = "README.md"
+repository = "https://github.com/Rahix/avr-hal/tree/master/ravedude"
+license = "MIT OR Apache-2.0"
+keywords = ["avr", "arduino", "avrdude"]
+categories = ["embedded", "hardware-support", "development-tools"]
 
 [dependencies]
 colored = "2.0.0"
