atmega-hal: ATtiny88 support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,10 @@ jobs:
             name: attiny85
             spec: attiny85
             crate: atmega-hal
+          - type: mcu
+            name: attiny88
+            spec: attiny88
+            crate: atmega-hal
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
