--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
     "chips/atmega328p-hal",
     "chips/atmega32u4-hal",
     "chips/atmega48p-hal",
+    "chips/atmega8u2-hal",
     "chips/attiny85-hal",
     "chips/attiny88-hal",
 
