Add crate for ATtiny MCUs with ATtiny85
Similar to `atmega-hal`, add `attiny-hal` which will be our HAL crate
for ATtiny MCUs.  As the first supported device from this family, add
ATtiny85.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,10 @@ jobs:
             name: atmega48p
             spec: atmega48p
             crate: atmega-hal
+          - type: mcu
+            name: attiny85
+            spec: attiny85
+            crate: attiny-hal
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
