add the atmega8u2 chip

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,10 @@ jobs:
             name: attiny88
             spec: attiny88
             crate: attiny-hal
+          - type: mcu
+            name: atmega8u2
+            spec: atmega8u2
+            crate: atmega-hal
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
