--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,5 @@ exclude = [
 [patch.crates-io]
 # XXX: Temporary fix for avr-rust/rust#148
 ufmt = { git = "https://github.com/Rahix/ufmt.git", rev = "12225dc1678e42fecb0e8635bf80f501e24817d9" }
+# Temporary fix until avr-device has a version bump
+avr-device = { git = "https://github.com/Rahix/avr-device", rev = "92e4d5f" }
