ci: Update package cache before installing libudev
Fix CI erroring due to an outdated package cache like in the following
run:

    https://github.com/Rahix/avr-hal/runs/2161018725

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
           toolchain: stable
           override: true
       - name: Install libudev
-        run: sudo apt-get install -y libudev-dev
+        run: sudo apt-get update && sudo apt-get install -y libudev-dev
       - name: Check ravedude
         uses: actions-rs/cargo@v1
         with:
