--- a/examples/arduino-mega2560/.cargo/config.toml
+++ b/examples/arduino-mega2560/.cargo/config.toml
@@ -2,7 +2,7 @@
 target = "../../avr-specs/avr-atmega2560.json"
 
 [target.'cfg(target_arch = "avr")']
-runner = "../../boards/arduino-mega2560/mega2560-runner.sh"
+runner = "ravedude -cb 57600 mega2560"
 
 [unstable]
 build-std = ["core"]
