Add explicit support for arduino-nano
1. Add the arduino-nano feature flag to arduino-hal.
2. Make the ADC6 and ADC7 pins only available for nano, not for uno.
3. Add an example crate for arduino-nano with just a blink and ADC example.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,9 @@ members = [
 
     # Examples
     "examples/arduino-leonardo",
-    "examples/arduino-uno",
     "examples/arduino-mega2560",
+    "examples/arduino-nano",
+    "examples/arduino-uno",
 ]
 exclude = [
     # The RAVEDUDE! Yeah!
