--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -12,6 +12,7 @@ board-selected = []
 mcu-atmega=[]
 arduino-leonardo = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
 arduino-mega2560 = ["mcu-atmega", "atmega-hal/atmega2560", "board-selected"]
+arduino-micro = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
 arduino-nano = ["mcu-atmega", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc", "board-selected"]
 arduino-uno = ["mcu-atmega", "atmega-hal/atmega328p", "board-selected"]
 
