diecimila blink example

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
           - type: board
             name: arduino-uno
           - type: board
+            name: arduino-diecimila
+          - type: board
             name: arduino-leonardo
           - type: board
             name: arduino-mega2560
