--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
             name: arduino-leonardo
           - type: board
             name: arduino-mega2560
+          - type: board
+            name: sparkfun-promicro
           - type: mcu
             name: atmega1280
             spec: atmega1280
