arduino-hal: Use runtime directly from avr-device
Once more than one HAL crates is included, it would be impossible to
have a single `rt` feature for the runtime (see [1]).  Fortunately this
can be sidestepped by importing the runtime directly from avr-device
instead of catching the reexport from the HAL.

[1]: https://github.com/Rahix/avr-hal/pull/179#discussion_r621571800

--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [features]
 default = ["rt"]
-rt = ["atmega-hal/rt"]
+rt = ["avr-device/rt"]
 
 board-selected = []
 mcu-atmega=[]
