--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -10,6 +10,7 @@ rt = ["avr-device/rt"]
 
 board-selected = []
 mcu-atmega=[]
+mcu-attiny=[]
 arduino-diecimila = ["mcu-atmega", "atmega-hal/atmega168", "board-selected"]
 arduino-leonardo = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
 arduino-mega2560 = ["mcu-atmega", "atmega-hal/atmega2560", "board-selected"]
@@ -17,6 +18,7 @@ arduino-nano = ["mcu-atmega", "atmega-hal/atmega328p", "atmega-hal/enable-extra-
 arduino-uno = ["mcu-atmega", "atmega-hal/atmega328p", "board-selected"]
 trinket-pro = ["mcu-atmega", "atmega-hal/atmega328p", "board-selected"]
 sparkfun-promicro = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
+adafruit-trinket = ["mcu-attiny", "attiny-hal/attiny85", "board-selected"]
 
 [dependencies]
 cfg-if = "1"
@@ -39,6 +41,10 @@ optional = true
 # this allows us to show our error instead of the one from `atmega-hal` (which
 # is much less helpful in this situation).
 features = ["disable-device-selection-error"]
+
+[dependencies.attiny-hal]
+path = "../mcu/attiny-hal/"
+optional = true
 
 [dependencies.avr-device]
 version = "0.3"
