ravedude: add support for trinket-pro (+change Board to support devices without serial port)
ravedude: trinketpro -> trinket-pro

--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -15,6 +15,7 @@ arduino-leonardo = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
 arduino-mega2560 = ["mcu-atmega", "atmega-hal/atmega2560", "board-selected"]
 arduino-nano = ["mcu-atmega", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc", "board-selected"]
 arduino-uno = ["mcu-atmega", "atmega-hal/atmega328p", "board-selected"]
+trinket-pro = ["arduino-uno"]
 sparkfun-promicro = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
 
 [dependencies]
