--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -41,3 +41,11 @@ features = ["disable-device-selection-error"]
 
 [dependencies.avr-device]
 version = "0.3"
+
+# Because this crate has its own check that at least one device is selected, we
+# can safely "circumvent" the check in `avr-device`.
+#
+# Why would we want that?  Otherwise, as `avr-device` is compiled first, its
+# error will be shown and ours won't which leads to a degraded user experience
+# as the displayed error message does not really tell what needs to be done...
+features = ["device-selected"]
