--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ members = [
     "examples/arduino-mega2560",
     "examples/arduino-nano",
     "examples/arduino-uno",
+    "examples/nano168",
     "examples/sparkfun-promicro",
     "examples/trinket-pro",
 ]
