ci: Build examples for Arduino Nano & Nano 168
Both boards actually have examples - build them in CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,10 @@ jobs:
             examples: true
           - type: board
             name: arduino-nano
-            examples: false
+            examples: true
           - type: board
             name: nano168
-            examples: false
+            examples: true
           - type: mcu
             name: atmega1280
             spec: atmega1280
