FIXME: temporarily use patched avr-device

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,4 @@ exclude = [
 [patch.crates-io]
 # XXX: Temporary fix for avr-rust/rust#148
 ufmt = { git = "https://github.com/Rahix/ufmt.git", rev = "12225dc1678e42fecb0e8635bf80f501e24817d9" }
+avr-device = { path = "../avr-device" }
