--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
             name: trinket-pro
             examples: true
           - type: board
+            name: trinket
+            examples: true
+          - type: board
             name: arduino-nano
             examples: true
           - type: board
