--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
     "examples/nano168",
     "examples/sparkfun-promicro",
     "examples/trinket-pro",
+    "examples/trinket",
 ]
 exclude = [
     # The RAVEDUDE! Yeah!
