--- a/examples/trinket/.cargo/config.toml
+++ b/examples/trinket/.cargo/config.toml
@@ -2,7 +2,7 @@
 target = "../../avr-specs/avr-attiny85.json"
 
 [target.'cfg(target_arch = "avr")']
-runner = "ravedude trinket -cb 57600"
+runner = "ravedude trinket"
 
 [unstable]
 build-std = ["core"]
