--- a/ravedude/Cargo.toml
+++ b/ravedude/Cargo.toml
@@ -16,6 +16,7 @@ tempfile = "3.2.0"
 serialport = "4.0.0"
 anyhow = "1.0.38"
 git-version = "0.3.4"
+ctrlc = "3.2.1"
 
 [dependencies.structopt]
 version = "0.3.21"
