--- a/ravedude/src/avrdude/avrdude.conf
+++ b/ravedude/src/avrdude/avrdude.conf
@@ -8683,6 +8683,14 @@ part parent "m328"
     ocdrev              = 1;
 ;
 
+part parent "m328"
+    id                  = "m328pb";
+    desc                = "ATmega328PB";
+    signature           = 0x1e 0x95 0x16;
+
+    ocdrev              = 1;
+;
+
 #------------------------------------------------------------
 # ATmega32m1
 #------------------------------------------------------------
