--- a/examples/arduino-uno/Cargo.toml
+++ b/examples/arduino-uno/Cargo.toml
@@ -11,6 +11,7 @@ ufmt = "0.1.0"
 nb = "0.1.2"
 embedded-hal = "0.2.3"
 pwm-pca9685 = "0.3.1"
+hash32 = "0.2.1"
 
 [dependencies.arduino-hal]
 path = "../../arduino-hal/"
