--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -24,7 +24,12 @@ nano168 = ["mcu-atmega", "atmega-hal/atmega168", "atmega-hal/enable-extra-adc", 
 [dependencies]
 cfg-if = "1"
 embedded-hal = "0.2.3"
+embedded-time = "0.10.0" # The 0.12, does not compile with Rust 1.51
 ufmt = "0.1.0"
+
+[dependencies.derivative]
+version = "2.2"
+features = ["use_core"]
 
 [dependencies.void]
 version = "1.0.2"
