--- a/examples/arduino-uno/Cargo.toml
+++ b/examples/arduino-uno/Cargo.toml
@@ -22,3 +22,6 @@ version = "0.3"
 [dependencies.either]
 version = "1.6.1"
 default-features = false
+
+[dependencies.arduino-portable]
+path = "../arduino-portable"
