--- a/examples/nano168/Cargo.toml
+++ b/examples/nano168/Cargo.toml
@@ -18,3 +18,6 @@ features = ["nano168"]
 
 [dependencies.avr-device]
 version = "0.3"
+
+[dependencies.arduino-portable]
+path = "../arduino-portable"
