Add support for `asm!()`

--- a/avr-hal-generic/Cargo.toml
+++ b/avr-hal-generic/Cargo.toml
@@ -18,3 +18,6 @@ features = ["unproven"]
 [dependencies.void]
 version = "1.0.2"
 default-features = false
+
+[build-dependencies]
+rustversion = "1.0"
