rename portable module to avr-portable, remember to add that directory to git

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ exclude = [
     # The RAVEDUDE! Yeah!
     "ravedude",
     # requires the user of this crate to specify the features for embedded-hal
-    "examples/arduino-portable",
+    "examples/avr-portable",
 ]
 
 [patch.crates-io]
