--- a/examples/sparkfun-promicro/Cargo.toml
+++ b/examples/sparkfun-promicro/Cargo.toml
@@ -15,5 +15,5 @@ embedded-hal = "0.2.3"
 path = "../../arduino-hal/"
 features = ["sparkfun-promicro"]
 
-[dependencies.arduino-portable]
-path = "../arduino-portable"
+[dependencies.avr-portable]
+path = "../avr-portable"
