--- a/examples/arduino-uno/Cargo.toml
+++ b/examples/arduino-uno/Cargo.toml
@@ -22,3 +22,7 @@ version = "0.3"
 [dependencies.either]
 version = "1.6.1"
 default-features = false
+
+[dependencies.void]
+version = "*"
+default-features = false
