Add avrxmega crate; add port implementations for xmega / attiny404

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     # MCU HAL crates
     "mcu/atmega-hal",
     "mcu/attiny-hal",
+    "mcu/avrxmega-hal",
 
     # Higher level crates
     "arduino-hal",
