Add support for Atmega8
based on PR #306

closes #363

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,10 @@ jobs:
             spec: atmega1284p
             crate: atmega-hal
           - type: mcu
+            name: atmega8
+            spec: atmega8
+            crate: atmega-hal
+          - type: mcu
             name: attiny85
             spec: attiny85
             crate: attiny-hal
