--- a/examples/arduino-uno/Cargo.toml
+++ b/examples/arduino-uno/Cargo.toml
@@ -12,6 +12,7 @@ nb = "0.1.2"
 embedded-hal = "0.2.3"
 pwm-pca9685 = "0.3.1"
 infrared = "0.14.1"
+embedded-storage = "0.2"
 
 [dependencies.arduino-hal]
 path = "../../arduino-hal/"
