hal: Re-expose critical-section-impl feature from avr-device
This makes it easier for downstream users to enable the feature flag
when they need critical-section support.

--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 default = ["rt"]
 rt = ["avr-device/rt"]
 
+critical-section-impl = ["avr-device/critical-section-impl"]
+
 board-selected = []
 mcu-atmega=[]
 mcu-attiny=[]
