--- a/mcu/atmega-hal/Cargo.toml
+++ b/mcu/atmega-hal/Cargo.toml
@@ -17,6 +17,8 @@ atmega2560 = ["avr-device/atmega2560", "device-selected"]
 atmega1280 = ["avr-device/atmega1280", "device-selected"]
 atmega1284p = ["avr-device/atmega1284p", "device-selected"]
 
+critical-section-impl = ["avr-device/critical-section-impl"]
+
 # Allow certain downstream crates to overwrite the device selection error by themselves.
 disable-device-selection-error = []
 
