Add CI for atmega128a, fix wdt, eeprom and adc based on atmega8

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,10 @@ jobs:
             spec: atmega1280
             crate: atmega-hal
           - type: mcu
+            name: atmega128a
+            spec: atmega128a
+            crate: atmega-hal
+          - type: mcu
             name: atmega328pb
             spec: atmega328p
             crate: atmega-hal
