examples: uno: Add comment about running in simulator

--- a/examples/arduino-uno/.cargo/config.toml
+++ b/examples/arduino-uno/.cargo/config.toml
@@ -3,6 +3,8 @@ target = "../../avr-specs/avr-atmega328p.json"
 
 [target.'cfg(target_arch = "avr")']
 runner = "ravedude uno -cb 57600"
+# To run in simulator, replace the line above with this:
+# runner = "simavr -m atmega328p"
 
 [unstable]
 build-std = ["core"]
