atmega32a: Basic support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,9 @@ jobs:
             spec: atmega1280
             crate: atmega-hal
           - type: mcu
+            name: atmega32a
+            spec: atmega32a
+          - type: mcu
             name: atmega128a
             spec: atmega128a
             crate: atmega-hal
