Added support for nano every uploading

--- a/ravedude/Cargo.toml
+++ b/ravedude/Cargo.toml
@@ -17,6 +17,7 @@ serialport = "4.0.0"
 anyhow = "1.0.38"
 git-version = "0.3.4"
 ctrlc = "3.2.1"
+serial = "0.4"
 
 [dependencies.structopt]
 version = "0.3.21"
