update to `embedded-hal` v1.0.0 (no more RC!)
it finally happened: the stable release of `embedded-hal` has just been
released.

--- a/avr-hal-generic/Cargo.toml
+++ b/avr-hal-generic/Cargo.toml
@@ -11,7 +11,7 @@ ufmt = "0.2.0"
 paste = "1.0.0"
 avr-device = "0.5.3"
 embedded-storage = "0.2"
-embedded-hal = "1.0.0-rc.3"
+embedded-hal = "1.0"
 
 [dependencies.embedded-hal-v0]
 version = "0.2.3"
