--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -27,7 +27,7 @@ nano168 = ["mcu-atmega", "atmega-hal/atmega168", "atmega-hal/enable-extra-adc", 
 
 [dependencies]
 cfg-if = "1"
-embedded-hal = "1.0.0-rc.3"
+embedded-hal = "1.0"
 ufmt = "0.2.0"
 
 [dependencies.embedded-hal-v0]
