--- a/examples/sparkfun-promicro/Cargo.toml
+++ b/examples/sparkfun-promicro/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 panic-halt = "0.2.0"
 ufmt = "0.2.0"
 nb = "1.1.0"
-embedded-hal = "1.0.0-rc.3"
+embedded-hal = "1.0"
 
 [dependencies.embedded-hal-v0]
 version = "0.2.3"
