--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "arduino-hal"
 version = "0.1.0"
+
 authors = ["Rahix <rahix@rahix.de>"]
 edition = "2021"
+description = "Board support crate for popular AVR dev-boards"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/rahix/avr-hal"
+keywords = ["avr", "arduino"]
+categories = ["no-std", "embedded", "hardware-support"]
 
 [features]
 default = ["rt"]
