attiny-hal: Build ATtiny85 on docs.rs

--- a/mcu/attiny-hal/Cargo.toml
+++ b/mcu/attiny-hal/Cargo.toml
@@ -24,6 +24,9 @@ critical-section-impl = ["avr-device/critical-section-impl"]
 # Allow certain downstream crates to overwrite the device selection error by themselves.
 disable-device-selection-error = []
 
+# We must select a microcontroller to build on docs.rs
+docsrs = ["attiny85"]
+
 [dependencies]
 avr-hal-generic = { path = "../../avr-hal-generic/" }
 
@@ -37,3 +40,6 @@ version = "0.5.4"
 # error will be shown and ours won't which leads to a degraded user experience
 # as the displayed error message does not really tell what needs to be done...
 features = ["device-selected"]
+
+[package.metadata.docs.rs]
+features = ["docsrs"]
